[package]
name = "rustqueuesim"
version = "0.1.0"
edition = "2021"
authors = ["Hemen \"Hemu\" Babis <hemu@pdx.edu>"]
description = "A simple instrumented queueing system simulation for CS-423/523."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hemen-babis/rustqueuesim"

[dependencies]
rand = "0.8"

[dev-dependencies]
lazy_static = "1"

[profile.release]
opt-level = 3
